<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="notification">Notifications</string>
    <string name="allownotification">allow notifications</string>
    <string name="location">Location</string>
    <string name="units">Units</string>
    <string name="unitsystem">Unit System</string>
    <string name="language">language</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="uv">Ultra Violet</string>
    <string name="visibility">Visibility</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="save">Save</string>


</resources>