<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="settingsPref"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/notification">
        <SwitchPreference
            android:key="notifications"
            android:title="@string/notification"
            android:defaultValue="true"
            android:summary="@string/allownotification"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/location">
            <ListPreference
                android:key="location"
                android:title="@string/location"
                android:defaultValue="GPS"
                android:entryValues="@array/locationValues"
                android:entries="@array/locationEntries"
                android:summary="%s"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/units">
            <ListPreference
                android:key="unit_system"
                android:title="@string/unitsystem"
                android:summary="%s"
                android:defaultValue="METRIC"
                android:entries="@array/unitSystemEntries"
                android:entryValues="@array/unitSystemValues"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/language">
        <ListPreference
            android:key="language"
            android:title="@string/language"
            android:summary="%s"
            android:defaultValue="en"
            android:entries="@array/languageEntries"
            android:entryValues="@array/languageValues"/>

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/windSpeed">
        <ListPreference
            android:key="wind"
            android:title="@string/units"
            android:summary="%s"
            android:defaultValue="m/s"
            android:entries="@array/windEntries"
            android:entryValues="@array/windValues"/>

    </PreferenceCategory>

</PreferenceScreen>